--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prisma:init": "prisma init",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --preview-feature",
+    "seeder:seed": "ts-node seeders/seed.ts",
     "clean": "rimraf dist"
   },
   "author": "Daniel Oguejiofor",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
