--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^22.7.6",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
     "ts-jest": "^29.2.5",
