--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.6",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
@@ -57,6 +58,8 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.0",
     "typedi": "^0.10.0",
