--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # APP
 PORT=3000
-NODE_ENV= # development | test | production
-SECRET_KEY=
+NODE_ENV="development" # "development" || "production"
+SECRET_KEY="secretKey"
 
 # LOG
 LOG_FORMAT="dev"
@@ -18,12 +18,11 @@ CREDENTIALS="true"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_URL=postgres://username:password@host:port/databasename?schema=public
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+### Prisma
+DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
 
-REDIS_HOST=
+# CLOUDINARY
+CLOUD_NAME=
+API_SECRET=
+API_KEY=
+FOLDER="motor-mart"
