--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "motor-mart",
   "version": "1.0.0",
-  "description": "A base for backend projects with TS, express, and typescript",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
